resources/node-pods-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-node-pod-1
  namespace: test
  labels:
    app: test-node-pod
spec:
  nodeSelector:
    test-node: "true"
  containers:
  - name: busybox
    image: busybox
    command: ["sh", "-c", "echo 'This is test node pod 1 on node with label test-node=true' && sleep 3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: test-node-pod-2
  namespace: test
  labels:
    app: test-node-pod
spec:
  nodeSelector:
    test-node: "true"
  containers:
  - name: busybox
    image: busybox
    command: ["sh", "-c", "echo 'This is test node pod 2 on node with label test-node=true' && sleep 3600"]
