resources/apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: demo
spec:
  selector:
    app: apache
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
