resources/python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: test
spec:
  selector:
    app: python
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
